Bug 382068 - Brush tips broken after exporting
Summary: Brush tips broken after exporting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 3.1.4
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-06 17:14 UTC by radian
Modified: 2017-11-24 09:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
smudge bugs (1.49 MB, image/gif)
2017-07-06 17:14 UTC, radian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description radian 2017-07-06 17:14:48 UTC
Created attachment 106467 [details]
smudge bugs

I tried to change names of some custom brush tips but get these problems after exporting tips:

1) Normal brush tips (.gbr) loads as full black square with no name.
2) Animated tips (.gih) loads with no name and significantly grow in size (260kb->1mb, 2.3mb->9.3mb)
3) Export dialog changes cursor to "loading", all settings ignored but can be changed (except selection mode for animated tips which is blocked).
Comment 1 Halla Rempt 2017-11-23 11:37:17 UTC
Git commit 3da66fc9866f299597e7c37fd2f3355478c98389 by Boudewijn Rempt.
Committed on 23/11/2017 at 11:36.
Pushed by rempt into branch 'master'.

Make it possible to save gbr/gih again

These save using QIODevice, so don't tell the export manager
that it needs a filename. Also, return an error if saving
fails.

M  +6    -3    plugins/impex/brush/kis_brush_export.cpp
M  +0    -1    plugins/impex/brush/kis_brush_export.h

https://commits.kde.org/krita/3da66fc9866f299597e7c37fd2f3355478c98389
Comment 2 Halla Rempt 2017-11-24 09:30:09 UTC
Git commit 8602a1aae13f6277d9ee208905f04fe1a2ddb61b by Boudewijn Rempt.
Committed on 24/11/2017 at 09:29.
Pushed by rempt into branch 'master'.

Fix saving GBR brushes

We should set the brush tip image, because that's what saved,
not the image(), which is just the icon.

M  +1    -0    libs/brush/kis_gbr_brush.h
M  +7    -5    plugins/impex/brush/kis_brush_export.cpp

https://commits.kde.org/krita/8602a1aae13f6277d9ee208905f04fe1a2ddb61b