Fix saving GBR brushes

We should set the brush tip image, because that's what saved,
not the image(), which is just the icon.

BUG:382068